# evolvesprouts

./: .cursorrules  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  README.md  REVIEW-cursor-eventbrite-event-creation-ffbf.md  SECURITY.md  pr-1023-review.md  redocly.yaml  review-findings.md
backend/: README.md  pyproject.toml  requirements.txt
backend/db/alembic/: env.py
backend/db/alembic/versions/: 0001_initial_schema.py  0002_add_iam_db_user.py  0002_drop_unused_domain.py  0003_add_admin_db_user.py  0003_drop_asset_file_size.py  0004_add_asset_share_links.py  0005_share_link_domain_gate.py  0006_drop_share_domain_default.py  0007_add_crm_tables.py  0008_add_asset_resource_key.py  0009_expand_crm_enums.py  0010_add_audit_logging.py  0010_add_services.py  0011_add_expenses.py  0011_add_org_suggestions.py  0012_unify_tickets.py  (+71 more)
backend/db/seed/: seed_data.sql
backend/infrastructure/: .checkov.yaml  cdk.context.json  eslint.config.mjs  package-lock.json  package.json
backend/infrastructure/lib/: admin-web-stack.ts  api-admin-crm-stack.ts  api-admin-services-stack.ts  api-stack.ts  cdk-source-hash.ts  cloudfront-www-proxy-functions.ts  crm-web-stack.ts  messaging-stack.ts  public-www-stack.ts  ses-identity-arns.ts  training-stack.ts  waf-stack.ts
backend/infrastructure/params/: README.md  auth-dev.json  database-dev.json  dev.json  network-dev.json  production.json
backend/infrastructure/scripts/: assert-existing-db.ts  patch-bundled-aws-cdk-lib-deps.js  patch-bundled-minimatch.js
backend/infrastructure/templates/: artifacts.yaml  auth.yaml  backend-api.yaml  database.yaml  network.yaml
backend/infrastructure/test/: admin-env-size.test.ts  admin-web-stack.test.ts  api-stack.test.ts  cloudfront-www-proxy-functions.test.ts  public-www-config-secret.test.ts  public-www-stack.test.ts  training-stack.test.ts
backend/lambda/: _bootstrap.py
backend/lambda/admin_families/: handler.py
backend/lambda/api_key_rotation/: handler.py
backend/lambda/assets_bucket_migrator/: handler.py
backend/lambda/auth_login/: handler.py
backend/lambda/bulk_expense_import/: handler.py
backend/lambda/eventbrite_sync_processor/: handler.py
backend/lambda/expense_parser/: handler.py
backend/lambda/free_guide_processor/: handler.py
backend/lambda/imports/: __init__.py
backend/lambda/inbound_invoice_email/: handler.py
backend/lambda/manager_request_processor/: handler.py
backend/lambda/media_processor/: handler.py
backend/lambda/migrations/: handler.py  runner.py  seed.py  sync.py  utils.py
backend/lambda/public_events/: handler.py
backend/lambda/ses_template_manager/: handler.py
backend/scripts/: build_lambda_bundle.py  dump_mba_instance_uuids.py
backend/src/app/: __init__.py  auth.py  config.py  currency_config.py  db.py  errors.py  exceptions.py  handler.py  http.py  models.py  pagination.py  utils.py
(+1797 files in other folders)
