[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolvesprouts-backend"
version = "0.1.0"
description = "Backend services for Evolve Sprouts."
requires-python = ">=3.12"
dependencies = [
  "alembic==1.18.3",
  "boto3==1.42.59",
  "pyjwt[crypto]==2.11.0",
  "pydantic==2.12.5",
  "psycopg[binary]==3.2.13",
  "sqlalchemy==2.0.46",
  "phonenumbers==9.0.24",
  "pycountry==26.2.16",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "moto[s3,ses,secretsmanager,sqs,cognitoidp]>=5.0.0",
]
dev = [
  "pre-commit>=4.0.0",
  "ruff>=0.13.0",
  "mypy>=1.18.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
