[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolvesprouts-backend"
version = "0.1.0"
description = "Backend services for Evolve Sprouts."
requires-python = ">=3.12"
dependencies = [
  "alembic==1.18.4",
  "boto3==1.43.36",
  "pyjwt[crypto]==2.13.0",
  "pydantic==2.13.4",
  "psycopg[binary]==3.3.4",
  "sqlalchemy==2.0.51",
  "phonenumbers==9.0.32",
  "pycountry==26.2.16",
  "reportlab==5.0.0",
  "pypdf==6.13.3",
  "segno==1.6.6",
]

[project.optional-dependencies]
test = [
  "pymupdf==1.27.2.3",
  "pytest>=9.0.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
]
dev = [
  "pre-commit>=4.0.0",
  "ruff>=0.13.0",
  "mypy>=1.20.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["assets/invoice/*.png"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.coverage.run]
source = ["app"]
branch = false

[tool.coverage.report]
fail_under = 1
show_missing = true
skip_empty = true
